# stps-extension

./: .gitignore  .gitmodules  ADDRESS_FUNCTION_STATUS.md  AI_FUNCTIONS_GUIDE.md  BINARIES.md  BUILD_PROCESS.md  CLAUDE.md  CMakeLists.txt  EXTENSION_VERWENDUNG.md  GOBD_README.md  GOBD_USAGE.md  HOW_TO_UPDATE_EXTENSION.md  METADATA_FIX.md  Makefile  QUICK_FIX_ARCHIVE_FUNCTIONS.md  QUICK_START.md  README.md  START_HERE.txt  STPS_FUNCTIONS.md  TROUBLESHOOTING_7ZIP.md  UPGRADING_DUCKDB.md  USAGE.md  WINDOWS_BUILD_SETUP.md  add-metadata.bat  build-windows-internal.bat  build-windows.bat  build.ps1  check-binary.sh  check_build.sh  duckdb_helpers.py  extension_config.cmake  fast-build.sh  quick-rebuild.bat  setup-repo.sh  start-duckdb-ui.sh  temp_rebuild.bat  test-extension.py  test-extension.sh  test_address_search.sql  test_gobd.sql  (+3 more)
.claude/: ralph-loop.local.md  settings.local.json
.claude/skills/: add-function.md  analyze-error.md  debug-function.md  rebuild.md  review-code.md  test-extension.md  update-docs.md
.github/workflows/: build-and-commit-binaries.yml  build.yml  debug-build.yml  linux-build-on-push.yml  lmw.yml  macos-build-on-push.yml  quick-build.yml  release.yml  windows-build-on-push.yml
.planning/: PROJECT.md  REQUIREMENTS.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/done/: 2026-01-15-review-extension-best-practices.md
.planning/todos/pending/: 2026-01-15-review-extension-best-practices.md
binaries/: README.md
docs/plans/: 2025-12-31-multi-version-build-system.md  2026-01-02-autoload-setup.md  2026-01-10-stps-is-valid-plz-design.md  2026-01-10-stps-split-street-design.md  2026-01-13-stps-7zip-extraction.md  2026-01-16-openai-to-anthropic-migration-design.md  2026-01-17-search-columns-data-values-design.md  2026-01-17-web-search-implementation-plan.md  2026-01-18-fix-address-web-search.md  2026-01-18-implementation-summary.md  2026-01-18-two-step-address-lookup-design.md  2026-01-18-two-step-address-lookup-implementation.md  2026-01-18-two-step-implementation-summary.md  2026-02-02-inso-account-design.md  2026-02-13-gobd-import-pipeline-design.md  2026-02-17-gdpr-masking-design.md  2026-02-17-gdpr-masking.md  2026-02-17-time-travel-design.md  2026-02-17-time-travel-impl.md
howToUseMD/: BUILD_SUCCESS.md  FILL_FUNCTIONS_ANALYSIS.md  GOBD_README.md  GOBD_USAGE.md
howToUseMD/binaries/: README.md
howToUseMD/docs/: MIGRATION_ANTHROPIC.md
howToUseMD/docs/plans/: 2026-01-07-automatic-iban-validation-design.md  2026-01-09-smart-cast-design.md  2026-01-09-smart-cast-implementation.md  2026-01-17-search-data-values.md  2026-01-17-web-search-implementation-plan.md  2026-01-17-web-search-tool-execution-design.md
scripts/: build-for-version.sh  install-extension.bat  install-extension.sh  test-version.sh
src/: account_validation.cpp  address_lookup.cpp  ai_functions.cpp  arrange_function.cpp  blz_lut_loader.cpp  case_transform.cpp  clean_database_function.cpp  curl_utils.cpp  drop_duplicates_function.cpp  drop_null_columns_function.cpp  filesystem_functions.cpp  fill_functions.cpp  gobd_cloud_reader.cpp  gobd_reader.cpp  gobd_reader_broken.cpp  gobd_reader_final.cpp  gobd_reader_old.cpp  gobd_reader_v3.cpp  iban_validation.cpp  import_folder_functions.cpp  inso_account_function.cpp  io_operations.cpp  mask_functions.cpp  nextcloud_functions.cpp  null_handling.cpp  path_function.cpp  plz_validation.cpp  polarsgodmode_extension.cpp  read_folders_function.cpp  scan_function.cpp  scan_nextcloud.cpp  search_columns_function.cpp  search_database_function.cpp  sevenzip_functions.cpp  smart_cast_function.cpp  smart_cast_scalar.cpp  smart_cast_utils.cpp  stps_extension.cpp  stps_lambda_function.cpp  stps_unified_extension.cpp  (+8 more)
src/include/: account_validation.hpp  address_lookup.hpp  ai_functions.hpp  arrange_function.hpp  blz_lut_loader.hpp  case_transform.hpp  clean_database_function.hpp  curl_utils.hpp  drop_duplicates_function.hpp  drop_null_columns_function.hpp  fill_functions.hpp  gobd_cloud_reader.hpp  gobd_reader.hpp  iban_validation.hpp  import_folder_functions.hpp  inso_account_function.hpp  io_operations.hpp  mask_functions.hpp  nextcloud_functions.hpp  null_handling.hpp  path_function.hpp  plz_validation.hpp  polarsgodmode_extension.hpp  scan_function.hpp  scan_nextcloud.hpp  search_columns_function.hpp  search_database_function.hpp  sevenzip_functions.hpp  smart_cast_function.hpp  smart_cast_scalar.hpp  smart_cast_utils.hpp  stps_extension.hpp  stps_extension.hpp.bak  stps_lambda_function.hpp  street_split.hpp  text_normalize.hpp  time_travel.hpp  utils.hpp  uuid_functions.hpp  webdav_utils.hpp  (+2 more)
src/include/shared/: content_searcher.hpp  filesystem_utils.hpp  pattern_matcher.hpp
src/kontocheck/: check_methods.cpp  check_methods.hpp
src/lzma/: 7z.c  7z.h  7zTypes.h  LzmaDec.c  LzmaDec.h
src/shared/: archive_utils.cpp  archive_utils.hpp  content_searcher.cpp  filesystem_utils.cpp  pattern_matcher.cpp
test/data/: encoded-header.7z  test.7z
test/sql/: account_validation.test  arrange.test  case_transform.test  drop_null_columns.test  filesystem.test  iban_validation.test  io_operations.test  lambda_function.test  null_handling.test  plz_validation.test  polarsgodmode.test  sevenzip.test  smart_cast.test  stps.test  street_split.test  text_normalize.test  time_travel.test  uuid_functions.test  xml_parser.test
